--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 						<ul class="links">
 							<li class="active"><a href="index.html">My Work</a></li>
 							<li><a href="generic.html">About Me</a></li> 
+							<li><a href="elements.html">Pricing</a></li> 
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.instagram.com/mua_aprile/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
