--- a/generic.html
+++ b/generic.html
@@ -27,6 +27,7 @@
 						<ul class="links">
 							<li><a href="index.html">My Work</a></li>
 							<li class="active"><a href="generic.html">About Me</a></li>
+							<li><a href="elements.html">Pricing</a></li>
 							<!--<li><a href="elements.html">Employment History </a></li> -->
 						</ul>
 						<ul class="icons">
